--- a/webservice/package.json
+++ b/webservice/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "typescript_nodejs_express_template",
+  "name": "stackit-hiring-assignment",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "build/app.js",
   "scripts": {
-    "start": "NODE_ENV=production pm2 start ./build/src/app.js -i 5 --attach --watch | ./node_modules/.bin/bunyan",
-    "dev": "nodemon -r tsconfig-paths\\register src\\app.ts | .\\node_modules\\.bin\\bunyan",
-    "lint": "eslint .. --ext .ts",
-    "lint:fix": "eslint .. --ext .ts --fix",
-    "prettier:check": "prettier --check src/**/*.{ts,json}",
-    "prettier:fix": "prettier --write src/**/*.{ts,json}",
+    "start": "NODE_ENV=production pm2 start ./build/app.js -i 5 --attach --watch | bunyan",
+    "dev": "nodemon -r tsconfig-paths\\register app.ts | .\\node_modules\\.bin\\bunyan",
+    "lint": "eslint app --ext .ts",
+    "lint:fix": "eslint app --ext .ts --fix",
+    "prettier:check": "prettier --check app/**/*.{ts,json}",
+    "prettier:fix": "prettier --write app/**/*.{ts,json}",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "keywords": [],
   "author": "Sarthak S Kumar",
-  "license": "MIT",
   "dependencies": {
     "@bull-board/api": "^5.21.6",
     "@bull-board/express": "^5.21.6",
@@ -29,7 +28,6 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.11.2",
-    "nodemon": "^3.1.4",
     "redis": "^4.6.7",
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6"
@@ -41,6 +39,7 @@
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
     "eslint": "^8.35.0",
+    "nodemon": "^3.1.4",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.7",
