--- a/appscript/appscript.json
+++ b/appscript/appscript.json
@@ -2,9 +2,5 @@
   "timeZone": "Asia/Kolkata",
   "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8",
-  "webapp": {
-    "executeAs": "USER_DEPLOYING",
-    "access": "ANYONE_ANONYMOUS"
-  }
+  "runtimeVersion": "V8"
 }
