--- a/webservice/package.json
+++ b/webservice/package.json
@@ -27,6 +27,7 @@
     "helmet": "^6.2.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.4.1",
     "mysql2": "^3.11.2",
     "redis": "^4.6.7",
     "typescript": "^4.9.5",
